<resources>
    <string name="app_name">TruBrowserMenuSample</string>

    <string name="adblock_counter_ads_removed">Ads removed: %1$d popups</string>
    <string name="adblock_counter_tracking_blocked">Tracking blocked: %1$d attempts</string>
    <string name="adblock_counter_traffic_saved">Traffic saved: %1$dGb</string>
    <string name="adblock_counter_traffic_saved_date">Since %1$d %2$s</string>

    <string name="bottom_app_menu_add_to_bookmarks">Add to\n bookmarks</string>
    <string name="bottom_app_menu_search_on_page">Search on\n page</string>
    <string name="bottom_app_menu_private_tab">Private tab</string>
    <string name="bottom_app_menu_dark_mode">Dark mode</string>
    <string name="bottom_app_menu_protect_tab">Protect tab</string>
    <string name="bottom_app_menu_bookmarks">Bookmarks</string>
    <string name="bottom_app_menu_downloads">Downloads</string>
    <string name="bottom_app_menu_add_to_home_screen">Add to home\n screen</string>
    <string name="bottom_app_menu_my_data">My data</string>
    <string name="bottom_app_menu_translate">Translate</string>
    <string name="bottom_app_menu_logout">Logout</string>
    <string name="bottom_app_menu_more">More</string>
    <string name="bottom_app_menu_history">History</string>
    <string name="bottom_app_menu_recent_tabs">Recent tabs</string>
    <string name="bottom_app_menu_desktop_site">Desktop site</string>
    <string name="bottom_app_menu_settings">Settings</string>
    <string name="bottom_app_menu_close_app">Close</string>

    <string name="ads_blocker_switch_text">Ads blocker</string>
    <string name="cookies_switch_text">Cookies</string>
    <string name="tracking_blocker_switch_text">Tracking blocker</string>
    <string name="show_images_switch_text">Show images</string>
</resources>