<?xml version="1.0" encoding="utf-8"?>
<com.example.trubrowsermenusample.IteoraBottomAppMenuAdblockControlsLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/adblock_controls_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/bottom_app_menu_divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/divider"
        android:orientation="vertical"
        android:paddingBottom="12dp">

        <com.example.trubrowsermenusample.IteoraAppMenuAdblockSwitch
            android:id="@+id/switch_adblock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ic_switch_adblock"
            android:text="@string/ads_blocker_switch_text" />

        <com.example.trubrowsermenusample.IteoraAppMenuAdblockSwitch
            android:id="@+id/switch_cookies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_switch_cookies"
            android:text="@string/cookies_switch_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/divider"
        android:orientation="vertical"
        android:paddingBottom="12dp">

        <com.example.trubrowsermenusample.IteoraAppMenuAdblockSwitch
            android:id="@+id/switch_tracking_blocker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_switch_tracking_blocker"
            android:text="@string/tracking_blocker_switch_text" />

        <com.example.trubrowsermenusample.IteoraAppMenuAdblockSwitch
            android:id="@+id/switch_show_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_switch_show_images"
            android:text="@string/show_images_switch_text" />

    </LinearLayout>

</com.example.trubrowsermenusample.IteoraBottomAppMenuAdblockControlsLayout>